PRISM-135: override fontawesome icon width for color families & close icon svg as width auto is causing issue on ie11

--- a/src/components/Facets/ColorWall/ColorWall.scss
+++ b/src/components/Facets/ColorWall/ColorWall.scss
@@ -145,6 +145,13 @@ $btn-border-thickness: 1px;
   }
 }
 
+svg {
+  &.svg-inline--fa.fa-pull-left.color-families-svg,
+  &.svg-inline--fa.fa-pull-left.close-icon-svg {
+    width: initial;
+  }
+}
+
 %color-wall-mode-btns-btn {
   display: flex;
   align-items: center;
